force-app/main/default/objects/Performance_Representative_Event_Data__c/Performance_Representative_Event_Data__c.object-meta.xml
<CustomObject>
    <label>Performance/Representative Event Data</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance/Representative Event Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>