force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Adult_Participants__c.field-meta.xml
<CustomField>
    <fullName>Adult_Participants__c</fullName>
    <label>Adult Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>