force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Are_Participation_Numbers_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Are_Participation_Numbers_Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Participation Numbers Estimated?</label>
    <type>Checkbox</type>
</CustomField>