force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Event_Tournaments__c.field-meta.xml
<CustomField>
    <fullName>Event_Tournaments__c</fullName>
    <label>Event/Tournaments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>