force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Gender_Diverse_Participants__c.field-meta.xml
<CustomField>
    <fullName>Gender_Diverse_Participants__c</fullName>
    <label>Gender Diverse Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>