force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>HYPERLINK(&quot;/a17/e?retURL=&quot;+Id+&quot;&amp;CF00Np0000000zUOK_lkid=&quot;+Id+&quot;&amp;CF00Np0000000zUOK=&quot;+Name, Name)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>