force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Performance_Representative__r.Organisation__r.Name</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>