force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Percentage_Event_Full__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Event_Full__c</fullName>
    <label>Percentage Event Full</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>