force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Performance_Representative__c.field-meta.xml
<CustomField>
    <fullName>Performance_Representative__c</fullName>
    <label>Performance/Representative Event Name</label>
    <referenceTo>Performance_Representative__c</referenceTo>
    <relationshipLabel>Performance/Representative Event Data</relationshipLabel>
    <relationshipName>Performance_Representative_Event_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>