force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Performance_Representative__r.Start_Date__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>