force-app/main/default/objects/Performance_Representative_Event_Data__c/fields/Young_People_Participants_0_18__c.field-meta.xml
<CustomField>
    <fullName>Young_People_Participants_0_18__c</fullName>
    <label>Young People Participants (0 – 18)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>