force-app/main/default/objects/Performance_Representative_Event_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Performance_Representative__c</columns>
    <columns>Organization__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>